added messanger app

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -67,22 +67,22 @@
         <div class="col-md-5 col-sm-6 order-lg-1 order-2">
 
         </div>
-        <div class="col-lg-2 col-12 order-lg-2 order-1 text-center">
+        {% comment %} <div class="col-lg-2 col-12 order-lg-2 order-1 text-center">
           <a href="/" class="logo-box mb-md--30">
             <img src="{% static 'assets/img/logo/logo123.png' %}" alt="logo" />
           </a>
-        </div>
+        </div> {% endcomment %}
         <div class="col-lg-5 col-md-7 col-sm-6 order-lg-3 order-3">
           <div class="header-toolbar">
             <ul class="header-toolbar-icons">
-              <li class="mini-cart-icon">
+              {% comment %} <li class="mini-cart-icon">
                 <div class="mini-cart mini-cart--1">
                   <a class="mini-cart bordered-icon" href="{% url 'core:order-summary' %}" id="cartDropdown">
                     <span class="mini-cart__count">{{ request.user|cart_item_count }}</span>
                     <i class="icon_cart_alt mini-cart__icon" href="{% url 'core:order-summary' %}"></i>
                   </a>
                 </div>
-              </li>
+              </li> {% endcomment %}
             </ul>
           </div>
         </div>
@@ -96,6 +96,9 @@
         <div class="col-12 position-static text-center">
           <nav class="main-navigation">
             <ul class="mainmenu">
+            <li href="/" class="mainmenu__item logo-box">
+            <img src="{% static 'assets/img/logo/logo123.png' %}" alt="logo" />
+            </li>
               <li class="mainmenu__item">
                 <a href="/" class="mainmenu__link">Home</a>
               </li>
@@ -108,6 +111,16 @@
               <li class="mainmenu__item">
                 <a href="{% url 'core:sellwithus' %}" class="mainmenu__link">Sell to Us</a>
               </li>
+              <li class="mainmenu__item mini-cart-icon">
+                <div class="mini-cart mini-cart--1">
+                  <a class="mini-cart bordered-icon" href="{% url 'core:order-summary' %}" id="cartDropdown">
+                    <span class="mini-cart__count">{{ request.user|cart_item_count }}</span>
+                    <i class="icon_cart_alt mini-cart__icon" href="{% url 'core:order-summary' %}"></i>
+                  </a>
+                </div>
+              </li> 
+
+              
             </ul>
           </nav>
         </div>
