--- a/static_in_env/assets/css/main.css
+++ b/static_in_env/assets/css/main.css
@@ -6960,13 +6960,13 @@ User Dashboard tab
 }
 
 .banner-bg-1 {
-  background: url(../img/banner/pattern-spate.jpg) no-repeat scroll
+  background: url(../img/banner/banner5.jpeg) no-repeat scroll
     center/cover;
 
 }
 
 .banner-bg-2 {
-  background: url(../img/banner/banner2.jpg) no-repeat scroll
+  background: url(../img/banner/banner10.jpeg) no-repeat scroll
     center/cover;
 }
 
