--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <img src="{% static 'assets/img/banner/banner5.jpeg' %}" />
+              <img src="{% static 'assets/img/banner/banner10.jpeg' %}" />
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@
             <br>
             <br>
             Cum functioneaza?
-            Echipa Metanoia cauta produse textile vintage care apartin celor mai mari case de moda din lume
+            Echipa Metanoia cauta produse textile vintage care apartin celor mai mari case de moda din lume. 
             Achizitionam esarfe si obiecte vestimentare de matase pentru a le oferi o a doua viata!
             Cele mai speciale piese de material devin un accesoriu esential vremurilor pe care le traim
             Piesele Metanoia sunt unicate, in cantitati limitate. Posted today, gone tomorrow!
@@ -129,13 +129,11 @@
   <!-- Most Viewed Product area End -->
 
   <!-- Banner area Start -->
-  <section class="banner-area banner-bg-1 ptb--80 ptb-md--60">
+  <section class="banner-area banner-bg-1 ptb--170 ptb-md--60">
     <div class="banner-box text-center">
-      <h2 class="banner__name">New Trending Collection</h2>
-      <p class="banner__text mb--50 mb-md--20">
-        Consideram ca, Cutare & Cutare
-      </p>
-      <a href="{% url 'core:shop-list' %}" class="btn btn-bordered btn-style-1">Shop Now</a>
+
+
+      <a href="{% url 'core:shop-list' %}" class="btn btn-style-1">Shop Now</a>
     </div>
   </section>
   <!-- Banner area End -->
@@ -236,10 +234,6 @@
             <h3 class="color--white">Subscribe to Newsletter</h3>
             <p class="mb--40 mb-sm--30">
               <strong>BE YOURSELF, BE UNIQUE!</strong>
-            </p>
-
-<p class="mb--40 mb-sm--30">
-              Măștile Metanoia sunt unice, fiind făcute din materiale vintage. Imprimeul poate avea o poziționare diferită fața de modelul pozat.
             </p>
 
             <form class="newsletter-form validate mt--40" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&id=05d85f18ef" method="post" id="mc-embedded-newsletter-form" name="mc-embedded-newsletter-form"
