--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,26 +35,24 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="footer-widget">
-          <h3 class="widget-title">Custom Products</h3>
+          <h3 class="widget-title">New this week</h3>
           <div class="widget-product">
-
+            {% for item in object_list %}
             <div class="product">
               <div class="product-img">
-                <img src="assets/img/products/11-450x450.jpg" alt="products" />
+                <img src="{{ item.image.url }}"alt="products" />
               </div>
               <div class="product-content">
 
                 <h4 class="product-title">
-                  <a href="product-details.html" tabindex="0">Mask Custom</a>
+                  <a href="{{ item.get_absolute_url }}" tabindex="0">{{ item.title }}</a>
                 </h4>
                 <div class="product-price-wrapper">
-                  <span class="money">550.00 LEI</span>
-                  <span class="product-price-old">
-                    <span class="money">700.00 LEI</span>
-                  </span>
+                  <span class="money">{{ item.price }}</span>
                 </div>
               </div>
             </div>
+            {% endfor %}
 
           </div>
         </div>
