--- a/templates/footer.html
+++ b/templates/footer.html
@@ -63,7 +63,9 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="footer-widget">
-          <h3 class="widget-title">New this week</h3>
+          <h3 class="widget-title">
+            <img src="/static/assets/img/logo/logo123.png" alt="logo" id="custom-log-mobile"/>
+          </h3>
           <div class="widget-product">
             {% if item in object_list %}
             <div class="product">
