some new changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -233,7 +233,7 @@
           <div class="newsletter text-center">
             <h3 class="color--white">Subscribe to Newsletter</h3>
             <p class="mb--40 mb-sm--30">
-              <strong>BE YOURSELF, BE UNIQUE!</strong>
+              <strong>BE UNAPOLOGETICALLY YOU</strong>
             </p>
 
             <form class="newsletter-form validate mt--40" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&id=05d85f18ef" method="post" id="mc-embedded-newsletter-form" name="mc-embedded-newsletter-form"
