--- a/templates/sellwithus.html
+++ b/templates/sellwithus.html
@@ -15,7 +15,7 @@
           </h2>
         {% load widget_tweaks %}
 
-<form method="post" action="{% url 'core:sell-with-us'%}" enctype: "multipart/form-data" novalidate>
+<form method="post" action="{% url 'core:sell-with-us'%}" enctype="multipart/form-data" novalidate>
   {% csrf_token %}
 
   {% for hidden_field in form.hidden_fields %}
