--- a/templates/order_snippet.html
+++ b/templates/order_snippet.html
@@ -50,19 +50,66 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Product</th>
-          <th>Total</th>
+          <th scope="col">#</th>
+            <th scope="col">Item title</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Total Item Price</th>
         </tr>
       </thead>
       <tbody>
+        <tbody>
+        {% for order_item in object.items.all %}
         <tr>
-          <td>Aliquam lobortis est <strong>x1</strong></td>
-          <td>$80.00</td>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td>{{ order_item.item.title }}</td>
+            <td>{{ order_item.item.price }}</td>
+            <td>
+                <a href="{% url 'core:remove-single-item-from-cart' order_item.item.slug %}"><i class="fas fa-minus mr-2"></i></a>
+                {{ order_item.quantity }}
+                <a href="{% url 'core:add-to-cart' order_item.item.slug %}"><i class="fas fa-plus ml-2"></i></a>
+            </td>
+            <td>
+            {% if order_item.item.discount_price %}
+                {{ order_item.get_total_discount_item_price }} LEI
+                <span class="badge badge-primary">Saving LEI{{ order_item.get_amount_saved }}</span>
+            {% else %}
+                {{ order_item.get_total_item_price }} LEI
+            {% endif %}
+            <a style='color: red;' href="{% url 'core:remove-from-cart' order_item.item.slug %}">
+                <i class="fas fa-trash float-right"></i>
+            </a>
+            </td>
+        </tr>
+        {% empty %}
+        <tr>
+            <td colspan='5'>Your cart is empty</td>
         </tr>
         <tr>
-          <td>Auctor gravida enim <strong>x1</strong></td>
-          <td>$60.00</td>
+            <td colspan="5">
+            <a class='btn btn-primary float-right' href='/'>Continue shopping</a>
+            </td>
         </tr>
+        {% endfor %}
+        {% if object.coupon %}
+        <tr>
+            <td colspan="4"><b>Coupon</b></td>
+            <td><b>-{{ object.coupon.amount }} LEI</b></td>
+        </tr>
+        {% endif %}
+        {% if object.get_total %}
+        <tr>
+            <td colspan="4"><b>Order Total</b></td>
+            <td><b>{{ object.get_total }} LEI</b></td>
+        </tr>
+        <tr>
+            <td colspan="5">
+            <a class='btn btn-warning float-right ml-2' href='/checkout/'>Proceed to checkout</a>
+            <a class='btn btn-primary float-right' href='/'>Continue shopping</a>
+            </td>
+        </tr>
+        {% endif %}
+        </tbody>
       </tbody>
       <tfoot>
         <tr class="order-total">
