--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
+
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block content %}
+
 
 <!-- Main content wrapper start -->
 <div class="main-content-wrapper">
@@ -9,7 +14,9 @@
           <!-- User Action Start -->
           <div class="user-actions">
             <div class="row">
-              <div class="col-12"></div>
+              <div class="col-12">
+
+              </div>
             </div>
           </div>
           <!-- User Action End -->
@@ -27,13 +34,12 @@
                 <div class="checkout-form">
                   <form action="POST" class="form">
                     {% csrf_token %}
-
+                    {{ form|crispy }}
+{% comment %} 
                     <div class="form-row mb--30">
                       <div class="form__group col-12">
-                        <label for="billing_country" class="form__label"
-                          >Country</label
-                        >
-                        {{ form.billing_country }}
+                        <label for="billing_country" class="form__label">Country</label>
+                          {{ form.billing_country }}
                         <div class="invalid-feedback">
                           Please select a valid country.
                         </div>
@@ -42,133 +48,43 @@
 
                     <div class="form-row mb--30">
                       <div class="form__group col-12">
-                        <label for="billing_company" class="form__label"
-                          >Shipping Address</label
-                        >
-                        <input
-                          type="text"
-                          placeholder="1234 Main St"
-                          id="shipping_address"
-                          name="shipping_address"
-                          class="form__input form__input--2"
-                        />
+                        <label for="billing_company" class="form__label">Shipping Address</label>
+                        <input type="text" placeholder='1234 Main St' id='shipping_address' name='shipping_address' class="form__input form__input--2">
                       </div>
                     </div>
 
                     <div class="form-row mb--30">
                       <div class="form__group col-12">
-                        <label for="billing_company" class="form__label"
-                          >Shipping Address 2</label
-                        >
-                        <input
-                          type="text"
-                          placeholder="Apartment or suite"
-                          id="shipping_address2"
-                          name="shipping_address2"
-                          class="form__input form__input--2"
-                        />
+                        <label for="billing_company" class="form__label">Shipping Address 2</label>
+                        <input type="text" placeholder='Apartment or suite' id='shipping_address2' name='shipping_address2' class="form__input form__input--2">
                       </div>
                     </div>
 
                     <div class="form-row mb--30">
                       <div class="form__group col-12">
-                        <label for="billing_streetAddress" class="form__label"
-                          >ZIP Code</label
-                        >
-                        <input
-                          type="text"
-                          placeholder="Zip code"
-                          id="shipping_zip"
-                          name="shipping_zip"
-                          class="form__input form__input--2"
-                        />
-                        <div class="invalid-feedback">Zip code required.</div>
+                        <label for="billing_streetAddress" class="form__label">ZIP Code</label>
+                        <input type="text" placeholder='Zip code' id='shipping_zip' name='shipping_zip' class="form__input form__input--2">
+                        <div class="invalid-feedback">
+                          Zip code required.
+                        </div>
                       </div>
                     </div>
-
-                    <div class="form-row mb--30">
-                      <div class="form__group col-12">
-                        <label for="billing_apartment" class="form__label"
-                          >Apartment, suite, unit etc. (optional)</label
-                        >
-                        <input
-                          type="text"
-                          name="billing_apartment"
-                          id="billing_apartment"
-                          class="form__input form__input--2"
-                        />
-                      </div>
-                    </div>
-                    <div class="form-row mb--30">
-                      <div class="form__group col-12">
-                        <label for="billing_city" class="form__label"
-                          >Town/City <span>*</span></label
-                        >
-                        <input
-                          type="text"
-                          name="billing_city"
-                          id="billing_city"
-                          class="form__input form__input--2"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="form-row mb--30">
-                      <div class="form__group col-12">
-                        <label for="billing_zip" class="form__label"
-                          >Post/Zip Code <span>*</span></label
-                        >
-                        <input
-                          type="text"
-                          name="billing_zip"
-                          id="billing_zip"
-                          class="form__input form__input--2"
-                        />
-                      </div>
-                    </div>
-                    <div class="form-row mb--30">
-                      <div class="form__group col-md-6 mb-sm--30">
-                        <label for="billing_phone" class="form__label"
-                          >Phone</label
-                        >
-                        <input
-                          type="text"
-                          name="billing_phone"
-                          id="billing_phone"
-                          class="form__input form__input--2"
-                        />
-                      </div>
-                      <div class="form__group col-md-6">
-                        <label for="billing_email" class="form__label"
-                          >Email Address <span>*</span></label
-                        >
-                        <input
-                          type="email"
-                          name="billing_email"
-                          id="billing_email"
-                          class="form__input form__input--2"
-                        />
-                      </div>
-                    </div>
-
+              
                     <div class="form-row">
                       <div class="form__group col-12">
-                        <label for="orderNotes" class="form__label"
-                          >Order Notes</label
-                        >
-                        <textarea
-                          class="form__input form__input--2 form__input--textarea"
-                          id="orderNotes"
-                          name="orderNotes"
-                          placeholder="Notes about your order, e.g. special notes for delivery."
-                        ></textarea>
+                        <label for="orderNotes" class="form__label">Order Notes</label>
+                        <textarea class="form__input form__input--2 form__input--textarea" id="orderNotes" name="orderNotes" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
                       </div>
-                    </div>
+                    </div> {% endcomment %}
+
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
                   </form>
                 </div>
               </div>
               <div class="col-lg-6 mt-md--30">
-                {% include "order_snippet.html" %}
+
+                  {% include "order_snippet.html" %}
+
               </div>
             </div>
           </div>
@@ -180,32 +96,5 @@
 </div>
 <!-- Main content wrapper end -->
 
-{% endblock content %} {% block extra_scripts %}
-<script>
-  var hideable_shipping_form = $(".hideable_shipping_form");
-  var hideable_billing_form = $(".hideable_billing_form");
+{% endblock content %}
 
-  var use_default_shipping = document.querySelector(
-    "input[name=use_default_shipping]"
-  );
-  var use_default_billing = document.querySelector(
-    "input[name=use_default_billing]"
-  );
-
-  use_default_shipping.addEventListener("change", function () {
-    if (this.checked) {
-      hideable_shipping_form.hide();
-    } else {
-      hideable_shipping_form.show();
-    }
-  });
-
-  use_default_billing.addEventListener("change", function () {
-    if (this.checked) {
-      hideable_billing_form.hide();
-    } else {
-      hideable_billing_form.show();
-    }
-  });
-</script>
-{% endblock extra_scripts %}
