--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -32,7 +32,7 @@
                   <h2>Shipping Address</h2>
                 </div>
                 <div class="checkout-form">
-                  <form action="POST" class="form">
+                  <form method="POST" class="form">
                     {% csrf_token %}
                     {{ form|crispy }}
 {% comment %} 
