--- a/templates/order_snippet.html
+++ b/templates/order_snippet.html
@@ -23,8 +23,8 @@
     </li>
     {% endif %}
     <li class="list-group-item d-flex justify-content-between">
-        <span>Total (USD)</span>
-        <strong>${{ order.get_total }}</strong>
+        <span>Total (LEI)</span>
+        <strong>LEi{{ order.get_total }}</strong>
     </li>
     </ul>
 
