--- a/templates/home.html
+++ b/templates/home.html
@@ -81,21 +81,24 @@
         <div class="col-12">
           <div class="product-carousel nav-top js-product-carousel-2">
             {% for item in object_list %}
+            
             <div class="mirora-product">
               <div class="product-img">
 
                 {% if item.image %}
-                <img src="{{ item.image.url }}" alt="Product" class="primary-image" />
+                <a href="{{ item.get_absolute_url }}"><img src="{{ item.image.url }}" alt="Product" class="primary-image" /></a>
                 {% endif %}
 
                 {% if item.image_fata %}
-                <img src="{{ item.image_fata.url }}" alt="Product" class="secondary-image" />
+                <a href="{{ item.get_absolute_url }}"><img src="{{ item.image_fata.url }}" alt="Product" class="secondary-image" /></a>
                 {% endif %}
 
+                <a href="{{ item.get_absolute_url }}">
                 <div class="product-img-overlay">
                   <span class="product-label discount"> </span>
                   <!-- <a data-toggle="modal" data-target="#productModal" class="btn btn-transparent btn-fullwidth btn-medium btn-style-1">Quick View</a> -->
                 </div>
+                </a>
               </div>
               <div class="product-content text-center">
                 <span>{{ item.get_category_display }}</span>
