--- a/templates/shop-list.html
+++ b/templates/shop-list.html
@@ -24,7 +24,7 @@
           </div>
 
           <!-- Main Shop wrapper Start -->
-          <div class="shop-product-wrap listview row no-gutters">
+          <div class="shop-product-wrap row no-gutters grid gridview-5">
             {% for item in object_list %}
             <div class="col-xl-3 col-lg-4 col-md-6 col-12">
               <div class="mirora-product mb-md--10">
