--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
   {% include "navbar.html" %}
 
     <div class="mt-5 pt-4">
-    {% if messages %}
+    {% comment %} {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
           {{ message }}
@@ -68,7 +68,7 @@
           </button>
         </div>
         {% endfor %}
-    {% endif %}
+    {% endif %} {% endcomment %}
     </div>
 
     {% block content %}
