cahnged minor things

--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -59,9 +59,12 @@
               </div>
             </form>
             <!-- Cart Area End -->
+            <p>Comanda va ajunge la tine în cel mai scurt timp posibil cu plată ramburs. Lucrăm cu cele mai rapide servicii de curierat din țară.</p>
           </div>
         </div>
       </div>
+
+    
       <div class="cart-page-total-wrapper">
         <div class="row justify-content-end">
           <div class="col-xl-6 col-lg-8 col-md-10">
