--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -6,9 +6,11 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-8 text-center">
           <div class="error">
-            <h2>Thank you!</h2>
+            <h2>Iti multumim pentru comanda!</h2>
             <p>
-              The order will be with you soon...
+              Echipa Metanoia te va contacta in cel mai scurt timp. 
+              <br>
+              Stay Safe & Chik
             </p>
             <a href="{% url 'core:home' %}" class="btn btn-4 btn-style-3">Back to home page</a
             >
