--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -77,7 +77,7 @@
                       </div>
                     </div> {% endcomment %}
 
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Finish Order</button>
                   </form>
                 </div>
               </div>
